# gw-charger-controller

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml
app/: __main__.py  backoff.py  config.py  control_loop.py  logging_setup.py  main.py  modbus_ev.py  modbus_victron.py  mqtt_client.py  state.py  version.py
tests/unit/: test_backoff.py  test_control_loop.py  test_logging.py  test_main.py  test_modbus_ev.py  test_modbus_victron.py
